# xenopeltis

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: game.rs  main.rs
websocket/: Cargo.toml
websocket/src/: main.rs
webui/: Cargo.toml
webui/src/: launcher.rs  main.rs
