[package]
name = "xenopeltis"
version = "0.1.1"
edition = "2021"
authors = ["Daniel He <he.daniel@protonmail.com", "Patrick Elsen <pelsen@xfbs.net>"]
description = "Multiplayer terminal snake game"
repository = "https://github.com/0xdh/xenopeltis"
license = "MIT"
workspace = ".."

[dependencies]
anyhow = "1.0.52"
futures = "0.3.19"
structopt = "0.3.25"
termion = "1.5.6"
termion-input-tokio = "0.3.0"
tokio = { version = "1.15.0", features = ["rt", "macros", "net", "io-std", "time"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
xenopeltis-common = { path = "../common", version = "0.1.0" }
