[package]
name = "xenopeltis-common"
version = "0.1.0"
edition = "2021"
authors = ["Daniel He <he.daniel@protonmail.com", "Patrick Elsen <pelsen@xfbs.net>"]
description = "Common files shared by xenopeltis server and client"
repository = "https://github.com/0xdh/xenopeltis"
license = "MIT"
workspace = ".."

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
