[package]
name = "xenopeltis-server"
version = "0.1.0"
edition = "2021"
authors = ["Daniel He <he.daniel@protonmail.com", "Patrick Elsen <pelsen@xfbs.net>"]
description = "Server for xenopeltis snake game"
repository = "https://github.com/0xdh/xenopeltis"
workspace = ".."

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
#sqlx = { version = "0.5.10", features = ["sqlite", "runtime-tokio-rustls"] }
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
xenopeltis-common = { path = "../common", version = "0.1.0" }
