[package]
name = "xenopeltis-server"
version = "0.1.0"
edition = "2021"
authors = ["Daniel He <he.daniel@protonmail.com", "Patrick Elsen <pelsen@xfbs.net>"]
description = "Server for xenopeltis snake game"
repository = "https://github.com/0xdh/xenopeltis"
license = "MIT"
workspace = ".."

[dependencies]
anyhow = "1.0.52"
bincode = "1.3.3"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.14"
rand = "0.8.4"
#sqlx = { version = "0.5.10", features = ["sqlite", "runtime-tokio-rustls"] }
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
xenopeltis-common = { path = "../common", version = "0.1.0" }
